refactored re iterator to be a bit more efficient